--- a/CAMPUS_ICT9Section_Q3Exercise2_Lastname Firstname.html.html
+++ b/CAMPUS_ICT9Section_Q3Exercise2_Lastname Firstname.html.html
@@ -39,7 +39,7 @@
     		</tr>
     		<tr>
       			<td><img src="boy_student.jpg" height="200px"></th>
-      			<td>Lou</td>
+      			<td>Louise</td>
       			<td>David</td>
       			<td>Topaz</td>
     		</tr> 
